--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "Rahul Rewar",
   "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+  "main": "server.js",
+ "scripts": {
+   "start": "node server.js",
+   "dev": "nodemon server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -28,5 +28,8 @@
     "papaparse": "^5.5.3",
     "pdfkit": "^0.17.1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
