--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "Rahul Rewar",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
  "scripts": {
-   "start": "node server.js",
-   "dev": "nodemon server.js"
+   "start": "node index.js",
+   "dev": "nodemon index.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
